--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -49,9 +49,15 @@ import { Container, Row, Col } from '../lib';
 <Section>
   <Container>
     <Row center>
-      <Col md="1/2">
+      <Col md="1/3">
+        <pre className="language-shell">
+          <code>npm install gridual --save</code>
+        </pre>
+      </Col>
+      <Col md="2/5">
         <pre>
-          <code>{`<Container>
+          <code>{`
+<Container>
   <Row center middle>
     <Col sm="1/2" md="1/3" xl="1/4">
       Hello World!
@@ -60,7 +66,8 @@ import { Container, Row, Col } from '../lib';
       Good Bye World!
     </Col>
   </Row>
-</Container>`}</code>
+</Container>
+        `.trim()}</code>
         </pre>
       </Col>
     </Row>
