--- a/docs/getting-started/installation.mdx
+++ b/docs/getting-started/installation.mdx
@@ -10,7 +10,7 @@ Installation
 Install gridual with npm:
 
 ```bash
-npm install gridual --save
+npm install gridual@alpha --save
 ```
 
 Now you can use Container, Row and Col components like this:
