--- a/docs/getting-started/what-is-gridual.mdx
+++ b/docs/getting-started/what-is-gridual.mdx
@@ -21,7 +21,7 @@ Gridual consists three main components, ```Container```, ```Row``` and
 
 Test the example below by resizing your browser.
 
-import { Row, Col } from '../../lib';
+import { Row, Col } from '../../src';
 import { Box } from '../helpers';
 
 <Row>
