--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -11,7 +11,7 @@ import { Container, Row, Col } from '../lib';
   links={[
     { label: "Get Started", href: "/docs", primary: true },
     { label: "Examples", href: "/examples" },
-    { label: "Github", href: "https://github.com/khoro/gridual" }
+    { label: "Github", href: "https://github.com/khoro/gridual/tree/v1" }
   ]}
 />
 
@@ -51,7 +51,7 @@ import { Container, Row, Col } from '../lib';
     <Row center>
       <Col md="1/3">
         <pre className="language-shell">
-          <code>npm install gridual --save</code>
+          <code>npm install gridual@alpha --save</code>
         </pre>
       </Col>
       <Col md="2/5">
